--- a/Modulo 1, U3/curriculum.html
+++ b/Modulo 1, U3/curriculum.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curriculum</title>
+    <link rel="stylesheet" href="curriculum.css">
 </head>
 <body>
     <h1>Carrizo López, Pamela Natasha</h1>
